crates/aranya-policy-lang/tests/data/error_line_number_in_chunks/one_chunk_custom_error.snap
---
source: crates/aranya-policy-lang/tests/tests.rs
expression: err
---
error: Reserved identifier
  |
6 |     let int = 0
  |         ^^^ found reserved identifier: `int`
